# emotion-graph

./: README.md  docker-compose.yml
.bruno/: Authorize.bru  Create user.bru  Report emotion.bru  bruno.json
api/: .dockerignore  Cargo.toml  Dockerfile
api/src/: config.rs  main.rs
api/src/api/: mod.rs  user.rs
api/src/dto/: admin.rs  mod.rs  user.rs
api/src/models/: mod.rs  report.rs  user.rs
api/src/utils/: jwt.rs
app/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json
app/assets/: main.css
app/components/: Brand.vue  Chart.vue  Layout.vue
app/components/UI/: Button.vue  Input.vue  Select.vue
app/composables/: api.ts
app/pages/: auth.vue  index.vue  me.vue
app/pages/shared/: [username].vue
app/plugins/: chartjs.ts
app/server/api/: [...].ts
