[package]
name = "emotion-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = "1.1"
dotenvy = "0.15"
url = "2.2"
jsonwebtoken = "9.3.0"
chrono = { version ="0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
actix-web-validator = "6.0.0"
futures-util = "0.3.31"